# fil-retro-pgf-3-ai-badgeholder

./: README.md  comparisons.csv  pyproject.toml  rank.py  vote.py
applications/: 04075bb8-3220-4e24-85fe-91595b81548c.json  06b06e85-3bca-4636-b07c-d0b59e534357.json  0b4979fd-39c8-451d-a993-11e65910c398.json  1104a741-807e-4508-a12f-9e29b40dfac0.json  1407a021-8b89-40ff-bc7b-de04d960b946.json  160e0cbc-91cc-4dcd-b720-c3a13183cacf.json  163ab215-74db-458f-bb91-95d950e28d4b.json  1855e0c8-6176-4492-9966-535738b38084.json  195f83d0-6ac2-4d65-b1cb-e727954ab936.json  1aa8d1d9-4d73-43d8-93ee-2d833c95689d.json  1f64b8a1-bdbe-4068-8711-603b6624fb58.json  22b40849-0e03-44bb-8631-f958a061df2e.json  22faefcd-a56d-4560-9573-e6703d441b78.json  23cfaeef-a367-44a9-ad63-3e85a80a839d.json  2747e810-1c8a-42dd-9124-ff5f4fa5e6e2.json  28288464-b209-4206-84ac-d3d47b340169.json  29f7b20b-11b4-4cb0-93fe-07282a101017.json  2ac959e8-673b-4a20-a94e-907c4c3e74c9.json  2b37d2df-098e-4212-bdd5-417c0682e942.json  2bd98798-00fc-4ee2-846b-543627dfae0c.json  2d1d635b-d63e-45ae-83a1-d5ebdac6b7b5.json  2e56ed6a-3bed-4332-b91c-4d42dea1d332.json  30131037-cc18-45ff-9ed8-0991c1101373.json  306102d4-d22a-41e2-b31e-af28c6dcd136.json  32c9890d-111f-4652-92ae-4d538018f11c.json  339010d4-e4eb-4e70-ae73-b895740cedce.json  36873163-7b77-4e7b-a2f5-dfd375d61a3a.json  37719aa9-51b2-4ae4-8865-12488f0a623c.json  383211c9-7940-4f3a-a6b1-fb60a761560b.json  392b614d-683f-44a6-a7c5-020ce1c2dcbe.json  3a9d5de6-444d-4fee-a7d0-ce640948848c.json  3c4ddafc-9700-4415-a1cc-28427437d222.json  (+88 more)
badgeholder/: .gitignore  AGENTS.md  (+1 more)
